# covid-epitope-prediction

./: .gitignore  .readthedocs.yml  CONTRIBUTING.rst  Makefile  README.rst  dvc.yaml  params.yaml  pyproject.toml  requirements.txt
.dvc/: config
data/: .gitignore
data/raw/: .gitignore  input_bcell.csv.dvc  input_covid.csv.dvc  input_sars.csv.dvc
docs/source/: conf.py  index.rst  testing.rst
models/: .gitignore
results/: .gitignore  metrics.json  pr_curve.csv  roc_curve.csv
src/: __init__.py  clean.py  evaluate.py  features.py  model.py  predict.py
tests/: __init__.py
