[tool.poetry]
name = "covid-epitope-prediction"
version = "0.0.1"
description = "Predicting COVID-19/SARS B-Cell Epitopes"
authors = ["rbpatt2019 <rb.patterson.cross@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1"
scikit-learn = "^0"
numpy = "^1"
seaborn = "^0"
matplotlib = "^3"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^5"
pylint = "^2"
mypy = "^0"
mypy-extensions = "^0"
codecov = "^2"
coverage = "^5"
pytest = "^6"
pytest-cov = "^2"
pytest-clarity = "^0.3.0a0"
pytest-sugar = "^0"
pre-commit = "^2"
sphinx = "^3"
poetry-version = "^0"
sphinx-rtd-theme = "^0"
ipython = "^7"

[tool.pytest.ini_options]
addopts = """
-vv
--ignore=docs
--diff-type=split
--doctest-modules
--cov=dash_covid19/
--cov-report term"""

[tool.isort]
profile = "black"
skip_gitignore = true
float_to_top = true

[tool.pylint.messages_control]
disable = "C"

[tool.pylint.similarities]
min-similarity-lines = 10
ignore-comments = true
ignore-docstrings = true
ignore-imports = true

[tool.coverage.report]
exclude_lines = [
        "if __name__ == .__main__.:",
]
show_missing = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
